--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>abo_merger</title>
+    <title>ABO Fiddler</title>
+
+    <style>
+      header {
+        border-bottom: 1px solid black;
+      }
+
+      header nav h1 {
+        display: inline-block;
+      }
+
+      header nav input {
+        margin-left: 15px;
+      }
+    </style>
   </head>
+
   <body>
-    <noscript>
-      <strong>We're sorry but abo_merger doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
